--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
           <a href="mailto:info@devstudio.com" class="site-nav__contacts">
             <svg width="16" height="12" class="site-nav__svg">
             <use href="./images/icons.svg#envelope"></use>
-          </svg>
-          info@devstudio.com</a>
+          </svg>info@devstudio.com</a>
         </li>
         <li>
           <a href="tel:+380961111111" class="site-nav__contacts">
@@ -51,9 +50,10 @@
           </li>
       </ul>
       <!-- mob-menu -->
-      <button type="button" class="mob-menu" mobile-menu>
-        <svg width="24px" height="16px">
-          <use href="./images/icons.svg#mob-menu"></use>
+      <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+        <svg width="40px" height="40px">
+          <use class="icon-menu" href="./images/icons.svg#mob-menu"></use>
+          <use class="icon-cross" href="./images/icons.svg#cross"></use>
         </svg>>
       </button>
   </div>
