--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </ul>
     </nav>
      <!-- Contacts -->
-      <ul class="site-nav__ul">
+      <ul class="site-nav__ul site-nav__ul--tab">
         <li>
           <a href="mailto:info@devstudio.com" class="site-nav__contacts">
             <svg width="16" height="12" class="site-nav__svg">
@@ -421,7 +421,7 @@
 </address>
 </div>
 <!--Приєднуйтесь (connect)-->
-<div>
+<div class="connect__div">
   <h2 class="connect__h2">Приєднуйтесь</h2>
   <ul class="connect-icons">
     <li class="connect-icons__li">
