--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!-- Custom styles -->
        <link rel="stylesheet" href="./css/main.min.css"> 
-      <!--  <link rel="stylesheet" href="./css/styles.css"> -->
     </head>
     <body>
    <!-- Header -->   
@@ -54,11 +53,17 @@
           </svg>info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111" class="site-nav__contacts">
-            <svg width="10" height="16" class="site-nav__svg">
+          <a href="tel:+380961111111" class="site-nav__contacts site-nav__number">
+            <svg width="10" height="16" class="site-nav__svg ">
               <use href="./images/icons.svg#smartphone"></use>
           </svg>+38 096 111 11 11</a>
           </li>
+      </ul>
+      <ul class="site-nav__link">
+        <li><a href="" class="site-nav__link--a">Instagram</a></li>
+        <li><a href="" class="site-nav__link--a">Twitter</a></li>
+        <li><a href="" class="site-nav__link--a">Facebook</a></li>
+        <li><a href="" class="site-nav__link--a"id="linked-a">LinkedIn</a></li>
       </ul>
     </div>
   </div>
@@ -182,15 +187,15 @@
 <h2 class="tasks__title">Чим ми займаємося</h2>
 <ul class="tasks__ul">
   <li class="tasks__li">
-    <img src="images/img_1.jpg" alt="coding on ipad" width="370" height="294">
+    <img srcset="images/img_1.jpg 1x, images/img_1@2x.jpg 2x" src="images/img_1.jpg" alt="coding on ipad" width="370" height="294">
     <p class="tasks__p">Десктопні додатки</p>
   </li>
   <li class="tasks__li">
-    <img src="images/img_2.jpg" alt="coding on mac" width="370" height="294">
+    <img srcset="images/img_2.jpg 1x, images/img_2@2x.jpg" src="images/img_2.jpg" alt="coding on mac" width="370" height="294">
     <p class="tasks__p">Мобільні додатки</p>
   </li>
   <li class="tasks__li">
-    <img src="images/img_3.jpg" alt="tablet gamma" width="370" height="294">
+    <img srcset="images/img_3.jpg 1x, images/img_3@2x.jpg 2x " src="images/img_3.jpg" alt="tablet gamma" width="370" height="294">
     <p class="tasks__p">Дизайнерські рішення</p>
   </li>
 </ul>
