--- a/portfolio.html
+++ b/portfolio.html
@@ -96,13 +96,45 @@
         <li class="posters-li">
           <a href="" class="posters-a">
             <div class="box">
-            <img srcset="
+              <!-- Picture -->
+              <picture>
+      <!-- <source srcset="./images/img_8m.jpg 450w, 
+                      ./images/img_8m@2x.jpg 900w"
+                media="(max-width: 767px)"
+                sizes="(max-width: 767px) 450px, 100vw">
+      <source srcset="./images/img_8t.jpg 354w, 
+                      ./images/img_8t@2x.jpg 708w" 
+                media="(min-width: 768px)" 
+                sizes="(min-width: 768px) 354px, 100vw">
+      <source srcset="./images/img_8.jpg 370w, 
+                      ./images/img_8@2x.jpg 740w" 
+                media="(min-width: 1200px)" 
+                sizes="(min-width: 1200px) 370px, 100vw">
+      <img src="./images/img_8.jpg" alt="Технокряк"> -->
+
+
+            <!-- <img srcset="
             ./images/img_8.jpg 370w,
             ./images/img_8@2x.jpg 740w,
             ./images/img_8m.jpg 450w,
-            ./images/img_8m@2x.jpg 900w"
+            ./images/img_8m@2x.jpg 900w,
+            ./images/img_8t.jpg 354w,
+            ./images/img_8t@2x.jpg 708w"
              src="./images/img_8.jpg" alt="Технокряк" 
-             sizes="(max-width: 767px) 450w, 100vw">
+             sizes="(max-width: 767px) 450px,
+                    (min-width: 768px) 354px, 
+                    (min-width: 1200px) 370px, 100vw"> -->
+
+                    <img srcset="
+            ./images/img_8.jpg 370w,
+            ./images/img_8m.jpg 450w,
+            ./images/img_8t.jpg 354w"
+             sizes="(max-width: 767px) 450px,
+                    (min-width: 768px) 354px, 
+                    (min-width: 1200px) 370px, 100vw"
+            src="./images/img_8.jpg" alt="Технокряк" >
+
+                  </picture>
             <div class="overlay">
               <p class="overlay-p">
               Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
@@ -119,13 +151,16 @@
         <li class="posters-li">
           <a href="" class="posters-a">
             <div class="box">
-            <img srcset="
-            ./images/img_9.jpg 370w,
-            ./images/img_9@2x.jpg 740w,
-            ./images/img_9m.jpg 450w,
-            ./images/img_9m@2x.jpg 900w"
-            src="./images/img_9.jpg" alt="Постер New Orlean vs Golden Star"
-            sizes="(max-width: 767px) 450w, 100vw">
+              <picture>
+                <img srcset="
+                ./images/img_9.jpg 370w,
+                ./images/img_9m.jpg 450w,
+                ./images/img_9t.jpg 354w"
+                 sizes="(max-width: 767px) 450px,
+                        (min-width: 768px) 354px, 
+                        (min-width: 1200px) 370px, 100vw"
+            src="./images/img_9.jpg" alt="Постер New Orlean vs Golden Star">
+          </picture>
             <div class="overlay">
               <p class="overlay-p">
               Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
@@ -142,13 +177,16 @@
         <li class="posters-li">
           <a href="" class="posters-a">
             <div class="box">
-            <img srcset="
-            ./images/img_10.jpg 370w,
-            ./images/img_10@2x.jpg 740w,
-            ./images/img_10m.jpg 450w,
-            ./images/img_10m@2x.jpg 900w"
-            src="./images/img_10.jpg" alt="Ресторан Seafood" 
-            sizes="(max-width: 767px) 450w, 100vw">
+              <picture>
+                <img srcset="
+                ./images/img_10.jpg 370w,
+                ./images/img_10m.jpg 450w,
+                ./images/img_10t.jpg 354w"
+                 sizes="(max-width: 767px) 450px,
+                        (min-width: 768px) 354px, 
+                        (min-width: 1200px) 370px, 100vw"
+            src="./images/img_10.jpg" alt="Ресторан Seafood">
+          </picture>
             <div class="overlay">
               <p class="overlay-p">
               Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
@@ -165,13 +203,16 @@
         <li class="posters-li">
           <a href="" class="posters-a">
             <div class="box">
-            <img srcset="
-            ./images/img_11.jpg 370w,
-            ./images/img_11@2x.jpg 740w,
-            ./images/img_11m.jpg 450w,
-            ./images/img_11m@2x.jpg 900w"
-            src="./images/img_11.jpg" alt="Проєкт Prime"
-            sizes="(max-width: 767px) 450w, 100vw">
+              <picture>
+                <img srcset="
+                ./images/img_11.jpg 370w,
+                ./images/img_11m.jpg 450w,
+                ./images/img_11t.jpg 354w"
+                 sizes="(max-width: 767px) 450px,
+                        (min-width: 768px) 354px, 
+                        (min-width: 1200px) 370px, 100vw"
+            src="./images/img_11.jpg" alt="Проєкт Prime">
+          </picture>
             <div class="overlay">
               <p class="overlay-p">
               Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
@@ -188,13 +229,16 @@
         <li class="posters-li">
           <a href="" class="posters-a">
             <div class="box">
-            <img srcset="
-            ./images/img_12.jpg 370w,
-            ./images/img_12@2x.jpg 740w,
-            ./images/img_12m.jpg 450w,
-            ./images/img_12m@2x.jpg 900w"
-            src="./images/img_12.jpg" alt="Проєкт Boxes"
-            sizes="(max-width: 767px) 450w, 100vw">
+              <picture>
+                <img srcset="
+                ./images/img_12.jpg 370w,
+                ./images/img_12m.jpg 450w,
+                ./images/img_12t.jpg 354w"
+                 sizes="(max-width: 767px) 450px,
+                        (min-width: 768px) 354px, 
+                        (min-width: 1200px) 370px, 100vw"
+            src="./images/img_12.jpg" alt="Проєкт Boxes">
+          </picture>
             <div class="overlay">
               <p class="overlay-p">
               Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
@@ -208,16 +252,20 @@
     </div>
   </a>
     </li>
+    <!-- Inspiration has no Borders -->
         <li class="posters-li">
           <a href="" class="posters-a">
             <div class="box">
-            <img srcset="
-            ./images/img_13.jpg 370w,
-            ./images/img_13@2x.jpg 740w,
-            ./images/img_13m.jpg 450w,
-            ./images/img_13m@2x.jpg 900w"
-             src="./images/img_13.jpg" alt="Inspiration has no Borders"
-             sizes="(max-width: 767px) 450w, 100vw">
+              <picture>
+                <img srcset="
+                ./images/img_13.jpg 370w,
+                ./images/img_13m.jpg 450w,
+                ./images/img_13t.jpg 354w"
+                 sizes="(max-width: 767px) 450px,
+                        (min-width: 768px) 354px, 
+                        (min-width: 1200px) 370px, 100vw"
+             src="./images/img_13.jpg" alt="Inspiration has no Borders">
+            </picture>
             <div class="overlay">
               <p class="overlay-p">
               Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
@@ -231,16 +279,20 @@
     </div>
   </a>
     </li>
+    <!-- Видання Limited Edition -->
         <li class="posters-li">
           <a href="" class="posters-a">
             <div class="box">
-            <img srcset="
-            ./images/img_14.jpg 370w,
-            ./images/img_14@2x.jpg 740w,
-            ./images/img_14m.jpg 450w,
-            ./images/img_14m@2x.jpg 900w"
-            src="./images/img_14.jpg" alt="Видання Limited Edition"
-            sizes="(max-width: 767px) 450w, 100vw">
+              <picture>
+                <img srcset="
+                ./images/img_14.jpg 370w,
+                ./images/img_14m.jpg 450w,
+                ./images/img_14t.jpg 354w"
+                 sizes="(max-width: 767px) 450px,
+                        (min-width: 768px) 354px, 
+                        (min-width: 1200px) 370px, 100vw"
+            src="./images/img_14.jpg" alt="Видання Limited Edition">
+          </picture>
             <div class="overlay">
               <p class="overlay-p">
               Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
@@ -254,16 +306,20 @@
     </div>
   </a>
     </li>
+    <!-- Проєкт LAB -->
         <li class="posters-li">
           <a href="" class="posters-a">
             <div class="box">
-            <img srcset="
-            ./images/img_15.jpg 370w,
-            ./images/img_15@2x.jpg 740w,
-            ./images/img_15m.jpg 450w,
-            ./images/img_15m@2x.jpg 900w"
-            src="./images/img_15.jpg" alt="Проєкт LAB"
-            sizes="(max-width: 767px) 450w, 100vw">
+              <picture>
+                <img srcset="
+                ./images/img_15.jpg 370w,
+                ./images/img_15m.jpg 450w,
+                ./images/img_15t.jpg 354w"
+                 sizes="(max-width: 767px) 450px,
+                        (min-width: 768px) 354px, 
+                        (min-width: 1200px) 370px, 100vw"
+            src="./images/img_15.jpg" alt="Проєкт LAB">
+          </picture>
             <div class="overlay">
               <p class="overlay-p">
               Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
@@ -277,16 +333,20 @@
     </div>
   </a>
     </li>
+    <!-- Growing Business -->
         <li class="posters-li">
           <a href="" class="posters-a">
             <div class="box">
-            <img srcset="
-            ./images/img_16.jpg 370w,
-            ./images/img_16@2x.jpg 740w,
-            ./images/img_16m.jpg 450w,
-            ./images/img_16m@2x.jpg 900w"
-            src="./images/img_16.jpg" alt="Growing Business"
-            sizes="(max-width: 767px) 450w, 100vw">
+              <picture>
+                <img srcset="
+                ./images/img_16.jpg 370w,
+                ./images/img_16m.jpg 450w,
+                ./images/img_16t.jpg 354w"
+                 sizes="(max-width: 767px) 450px,
+                        (min-width: 768px) 354px, 
+                        (min-width: 1200px) 370px, 100vw"
+            src="./images/img_16.jpg" alt="Growing Business">
+          </picture>
             <div class="overlay">
               <p class="overlay-p">
               Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
