--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </li>
         <li>
           <a href="tel:+380961111111" class="site-nav__contacts site-nav__number">
-            <svg width="10" height="16" class="site-nav__svg ">
+            <svg width="10" height="16" class="site-nav__svg">
               <use href="./images/icons.svg#smartphone"></use>
           </svg>+38 096 111 11 11</a>
           </li>
@@ -207,7 +207,14 @@
   <h2 class="command__title">Наша команда</h2>
   <ul class="command__ul">
       <li class="command__li">
-      <img src="images/img_4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+      <img srcset="
+      ./images/img_4.jpg 270w,
+      ./images/img_4m.jpg 450w,
+      ./images/img_4t.jpg 354w"
+       sizes="(max-width: 767px) 450px,
+              (min-width: 768px) 354px, 
+              (min-width: 1200px) 270px, 100vw" 
+              src="images/img_4.jpg" alt="Ігор Дем'яненко">
       <div class="command__div">
       <h3 class="command__h3">Ігор Дем'яненко</h3>
     <p class="command__p">Product Designer</p>
@@ -244,7 +251,14 @@
     </div>
   </li>
       <li class="command__li">
-      <img src="images/img_5.jpg" alt="Ольга Рєпіна" width="270" height="260">
+      <img srcset="
+      ./images/img_5.jpg 270w,
+      ./images/img_5m.jpg 450w,
+      ./images/img_5t.jpg 354w"
+       sizes="(max-width: 767px) 450px,
+              (min-width: 768px) 354px, 
+              (min-width: 1200px) 270px, 100vw" 
+      src="images/img_5.jpg" alt="Ольга Рєпіна">
       <div class="command__div">
       <h3 class="command__h3">Ольга Рєпіна</h3>
       <p class="command__p">Frontend Developer</p>
@@ -281,7 +295,14 @@
       </div>
       </li>
     <li class="command__li">
-      <img src="images/img_6.jpg" alt="Микола Тарасов" width="270" height="260">
+      <img srcset="
+      ./images/img_6.jpg 270w,
+      ./images/img_6m.jpg 450w,
+      ./images/img_6t.jpg 354w"
+       sizes="(max-width: 767px) 450px,
+              (min-width: 768px) 354px, 
+              (min-width: 1200px) 270px, 100vw" 
+      src="images/img_6.jpg" alt="Микола Тарасов">
       <div class="command__div">
       <h3 class="command__h3">Микола Тарасов</h3>
       <p class="command__p">Marketing</p>
@@ -318,7 +339,14 @@
       </div>
       </li>
     <li class="command__li">
-        <img src="images/img_7.jpg" alt="Михайло Єрмаков" width="270" height="260">
+        <img srcset="
+        ./images/img_7.jpg 270w,
+        ./images/img_7m.jpg 450w,
+        ./images/img_7t.jpg 354w"
+         sizes="(max-width: 767px) 450px,
+                (min-width: 768px) 354px, 
+                (min-width: 1200px) 270px, 100vw" 
+        src="images/img_7.jpg" alt="Михайло Єрмаков">
         <div class="command__div">
         <h3 class="command__h3">Михайло Єрмаков</h3>
       <p class="command__p">UI Designer</p>
