--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <!-- Site nav -->
       <div>
       <nav>
-      <ul class="site-nav__ul">
+      <ul class="site-nav__ul--nav">
         <li>
           <a href="./index.html" class="site-nav__current site-nav__page">Студія</a>
         </li>
