--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="site-nav__div container">
       <a href="./index.html" class="site-nav__logo"><span class="web">Web</span>Studio</a>
             <!-- mob-menu -->
-            <button type="button" class="menu-button is-open" aria-expanded="true" aria-label="переключатель моб меню" aria-controls="menu-container" data-menu-button>
+            <button type="button" class="menu-button is-open" aria-expanded="true" 
+            aria-label="переключатель моб меню" aria-controls="menu-container" data-menu-button>
               <svg width="24px" height="16px">
                 <use class="icon-menu" href="./images/icons.svg#mob-menu"></use>
                 <use class="icon-cross" href="./images/icons.svg#cross"></use>
@@ -116,7 +117,8 @@
           <!-- Comment -->
           <label class="modal-form__label" for="comment">Коментар</label>
             <div class="modal-form__div">
-              <textarea name="comment" id="comment" class="modal-form__comment" rows="5" placeholder="Введіть текст"></textarea>
+              <textarea name="comment" id="comment" class="modal-form__comment" 
+              rows="5" placeholder="Введіть текст"></textarea>
             </div>
       </form>
       <!-- Submit -->
@@ -187,15 +189,18 @@
 <h2 class="tasks__title">Чим ми займаємося</h2>
 <ul class="tasks__ul">
   <li class="tasks__li">
-    <img srcset="images/img_1.jpg 1x, images/img_1@2x.jpg 2x" src="images/img_1.jpg" alt="coding on ipad" width="370" height="294">
+    <img srcset="images/img_1.jpg 1x, images/img_1@2x.jpg 2x" src="images/img_1.jpg" 
+    alt="coding on ipad" width="370" height="294">
     <p class="tasks__p">Десктопні додатки</p>
   </li>
   <li class="tasks__li">
-    <img srcset="images/img_2.jpg 1x, images/img_2@2x.jpg" src="images/img_2.jpg" alt="coding on mac" width="370" height="294">
+    <img srcset="images/img_2.jpg 1x, images/img_2@2x.jpg" src="images/img_2.jpg" 
+    alt="coding on mac" width="370" height="294">
     <p class="tasks__p">Мобільні додатки</p>
   </li>
   <li class="tasks__li">
-    <img srcset="images/img_3.jpg 1x, images/img_3@2x.jpg 2x " src="images/img_3.jpg" alt="tablet gamma" width="370" height="294">
+    <img srcset="images/img_3.jpg 1x, images/img_3@2x.jpg 2x " src="images/img_3.jpg" 
+    alt="tablet gamma" width="370" height="294">
     <p class="tasks__p">Дизайнерські рішення</p>
   </li>
 </ul>
@@ -448,7 +453,9 @@
 <address class="footer__address">
 <ul>
   <li class="footer__address--li">
-    <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="footer__address--a addpos1">м. Київ, пр-т Лесі Українки, 26</a>
+    <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" 
+    rel="noopener noreferrer" class="footer__address--a addpos1">
+    м. Київ, пр-т Лесі Українки, 26</a>
   </li>
   <li class="footer__address--li">
     <a href="mailto:info@devstudio.com" class="footer__address--a addpos2">info@devstudio.com</a>
@@ -497,13 +504,15 @@
 <div class="subscribe">
   <form name="subscribe">
     <label for="email" class="connect__p">Підпишіться на розсилку</label>
+    <div class="subscribe__form">
     <input type="email" name="email" id="email" class="subscribe__email" placeholder="E-mail" />
+  </form>
     <button type="submit" class="subscribe__button">Підписатися
       <svg width="24px" height="24px" class="subscribe__svg">
         <use href="./images/icons.svg#send"></use>
       </svg>
     </button>
-  </form>
+  </div>
 </div>
 <!--Subscribe end-->
 </div>
