--- a/portfolio.html
+++ b/portfolio.html
@@ -424,13 +424,15 @@
   <div class="subscribe">
     <form name="subscribe">
       <label for="email" class="connect__p">Підпишіться на розсилку</label>
+      <div class="subscribe__form">
       <input type="email" name="email" id="email" class="subscribe__email" placeholder="E-mail" />
+    </form>
       <button type="submit" class="subscribe__button">Підписатися
         <svg width="24px" height="24px" class="subscribe__svg">
           <use href="./images/icons.svg#send"></use>
         </svg>
       </button>
-    </form>
+    </div>
   </div>
   <!--Subscribe end-->
   </div>
