--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                 <use class="icon-cross" href="./images/icons.svg#cross"></use>
               </svg>
             </button>
-            <div class="menu-container is-open" id="menu-container" data-menu>
+            <div class="menu-container" id="menu-container" data-menu>
               <!-- Site nav -->
       <div>
       <nav>
@@ -53,7 +53,7 @@
         </li>
         <li>
           <a href="tel:+380961111111" class="site-nav__contacts site-nav__number">
-            <svg width="10" height="16" class="site-nav__svg ">
+            <svg width="10" height="16" class="site-nav__svg">
               <use href="./images/icons.svg#smartphone"></use>
           </svg>+38 096 111 11 11</a>
           </li>
