--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <div class="site-nav__div container">
       <a href="./index.html" class="site-nav__logo"><span class="web">Web</span>Studio</a>
             <!-- mob-menu -->
-            <button type="button" class="menu-button is-open" aria-expanded="true" 
+            <button type="button" class="menu-button" aria-expanded="false" 
             aria-label="переключатель моб меню" aria-controls="menu-container" data-menu-button>
               <svg width="24px" height="16px">
                 <use class="icon-menu" href="./images/icons.svg#mob-menu"></use>
                 <use class="icon-cross" href="./images/icons.svg#cross"></use>
               </svg>
             </button>
-            <div class="menu-container is-open" id="menu-container" data-menu>
+            <div class="menu-container" id="menu-container" aria-expanded="false"  data-menu>
               <!-- Site nav -->
       <div>
       <nav>
